# synergistic-information-primitive-network

./: CONTRIBUTING.md  README.md  implementation_plan.md  main.py  pyproject.toml  task.md  test_subclass.py
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/phase-1/: PLAN.md  SUMMARY.md
.planning/phases/phase-2/: CONTEXT.md  PLAN.md  RESEARCH.md  SUMMARY.md
.planning/phases/phase-3/: 03-01-SUMMARY.md  PLAN.md  RESEARCH.md
.planning/phases/phase-4/: PLAN.md  RESEARCH.md  SUMMARY.md
.planning/phases/phase-5/: CONTEXT.md  PLAN.md  RESEARCH.md  SUMMARY.md
.planning/phases/phase-6/: CONTEXT.md  PLAN-6.1.md  PLAN-6.2.md  PLAN-6.3.md  PLAN.md
.planning/research/: phase-1-audit.md  phase-6-scaling.md
.trunk/: trunk.yaml
REPORTS/: coreference_interpretability.md  synergy_highlights.html  te_highlights.html
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  DEV_DOC.md  EXAMPLES.md  SIP-Net-AI-Architecture.md  TESTING.md
docs/project-notes/: deep-sip-plan-review.md  implementation_plan.md  sip-net-milestone-1.md  task1.md  walkthrough1.md  walkthrough2.md
scripts/: cross_validate_estimators.py  demo_training.py  diag_batch_time.py  diagnose_gradient_stability.py  diagnose_math_stability.py  diagnose_synergy.py  interpret_coreference.py  test_batch_scaling.py  test_gradient_flow.py  test_multi_layer_scaling.py  test_singularities.py  train_deep_sipnet.py  train_delayed_xor.py  train_multi_bus_routing.py  train_nlp_coreference.py  train_ontonotes_coref.py  verify_ignore_index.py  verify_nlp_hardening.py
scripts/baselines/: lstm_coref.py  transformer_coref.py
tests/integration/: test_sipnet.py
(+22 files in other folders)
