[project]
name = "synergistic-information-primitive-network"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.2",
    "scipy>=1.17.1",
    "torch>=2.10.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]

[tool.ruff]
select = ["E", "F", "I", "N", "W", "UP", "B", "ANN"]
ignore = ["ANN101", "ANN102"]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = "src"
explicit_package_bases = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
