[project]
name = "synergistic-information-primitive-network"
version = "1.0.0-alpha"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.8.5",
    "matplotlib>=3.10.9",
    "numpy>=2.4.2",
    "pandas>=3.0.2",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.7.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]

[tool.ruff]
select = ["E", "F", "I", "N", "W", "UP", "B", "ANN"]
ignore = ["ANN101", "ANN102"]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = "src"
explicit_package_bases = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
